<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LNH-L9-wRB">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add Event-->
        <scene sceneID="FG0-7Q-anF">
            <objects>
                <viewController title="Add Event" id="LNH-L9-wRB" customClass="AddNewEventViewController" customModule="Practice" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="EM1-iz-p73">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gzd-oh-UJD">
                                <rect key="frame" x="67" y="20" width="241" height="241"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Gzd-oh-UJD" secondAttribute="height" multiplier="1:1" id="qgc-bf-1Gk"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name of event" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yMX-MF-VyE">
                                <rect key="frame" x="16" y="326" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="UHK-sc-56k"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JJp-1h-LKa">
                                <rect key="frame" x="16" y="269" width="343" height="49"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="49" id="JmQ-mA-xcD"/>
                                </constraints>
                                <state key="normal" title="Take Picture"/>
                                <connections>
                                    <action selector="takePicture:" destination="LNH-L9-wRB" eventType="touchUpInside" id="UEq-n9-ioj"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yp9-it-sht">
                                <rect key="frame" x="16" y="364" width="343" height="69"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="69" id="Moi-gB-A9w"/>
                                </constraints>
                                <state key="normal" title="Add Your Event"/>
                                <connections>
                                    <action selector="addEvent:" destination="LNH-L9-wRB" eventType="touchUpInside" id="UKs-KH-ZJT"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Gzd-oh-UJD" firstAttribute="leading" secondItem="8Po-SC-OC6" secondAttribute="leading" constant="67" id="BC1-fB-Kej"/>
                            <constraint firstItem="Gzd-oh-UJD" firstAttribute="centerX" secondItem="JJp-1h-LKa" secondAttribute="centerX" id="Byr-LZ-R11"/>
                            <constraint firstItem="yMX-MF-VyE" firstAttribute="trailing" secondItem="yp9-it-sht" secondAttribute="trailing" id="C0B-0F-UET"/>
                            <constraint firstItem="JJp-1h-LKa" firstAttribute="leading" secondItem="EM1-iz-p73" secondAttribute="leadingMargin" id="LIw-lz-Bcf"/>
                            <constraint firstItem="yMX-MF-VyE" firstAttribute="top" secondItem="JJp-1h-LKa" secondAttribute="bottom" constant="8" symbolic="YES" id="LYX-iZ-2Ej"/>
                            <constraint firstItem="yMX-MF-VyE" firstAttribute="leading" secondItem="yp9-it-sht" secondAttribute="leading" id="OHs-In-OG6"/>
                            <constraint firstItem="JJp-1h-LKa" firstAttribute="trailing" secondItem="yMX-MF-VyE" secondAttribute="trailing" id="RG6-K0-xGm"/>
                            <constraint firstItem="yp9-it-sht" firstAttribute="top" secondItem="yMX-MF-VyE" secondAttribute="bottom" constant="8" symbolic="YES" id="Sas-W5-SbI"/>
                            <constraint firstItem="JJp-1h-LKa" firstAttribute="trailing" secondItem="EM1-iz-p73" secondAttribute="trailingMargin" id="Y6Q-Fg-ZE6"/>
                            <constraint firstItem="JJp-1h-LKa" firstAttribute="top" secondItem="Gzd-oh-UJD" secondAttribute="bottom" constant="8" symbolic="YES" id="ZDa-uo-iqW"/>
                            <constraint firstItem="Gzd-oh-UJD" firstAttribute="top" secondItem="8Po-SC-OC6" secondAttribute="top" id="gqd-Op-wxk"/>
                            <constraint firstItem="JJp-1h-LKa" firstAttribute="leading" secondItem="yMX-MF-VyE" secondAttribute="leading" id="rZt-tZ-d2B"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="8Po-SC-OC6"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Add Event" image="icons8-plus-32" id="V3g-ou-ndN"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="imageView" destination="Gzd-oh-UJD" id="UrN-SY-Jil"/>
                        <outlet property="nameField" destination="yMX-MF-VyE" id="lzO-Ga-IO6"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="rVK-yQ-QVM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-402.39999999999998" y="-158.77061469265368"/>
        </scene>
    </scenes>
    <resources>
        <image name="icons8-plus-32" width="24" height="24"/>
    </resources>
</document>
