...
    @IBAction func addEvent(_ sender: Any) {
        guard let image = imageView.image else{
            notify(title: "Failure", subtitle: "Please include an image")
            return
        }
        guard let text = nameField.text, !text.isEmpty else{
            notify(title: "Failure", subtitle: "No name entered")
            return
        }
        
        let ev = Event(name: nameField.text!, image: image)
        DataManager.sharedInstance.addEvent(event: ev) { (err) in
            self.nameField.text = ""
            self.imageView.image = nil
            self.notify(title: "Success", subtitle: "Event was created")
        }
        
    }
    
    /*
    // MARK: - Navigation
...
